[package]
name = "astrid-capsule-memory"
version = "0.1.0"
edition = "2024"
description = "Cross-session memory capsule for Astrid OS"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { version = "0.3.0", features = ["derive"] }
extism-pdk = "1.4.1"
uuid = { version = "1.22", features = ["rng-getrandom"] }
serde = "1.0"
serde_json = "1.0"
