[package]
name = "astrid-capsule-memory"
version = "0.1.0"
edition = "2024"
description = "Cross-session memory capsule for Astrid OS"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { version = "0.5.3", features = ["derive"] }
uuid = { version = "1.22", features = ["rng-getrandom"] }
serde = "1.0"
serde_json = "1.0"

[profile.release]
codegen-units = 1
lto = true
strip = true

[patch.crates-io]
astrid-sdk = { path = "../../sdk-rust/astrid-sdk" }
astrid-sdk-macros = { path = "../../sdk-rust/astrid-sdk-macros" }
astrid-sys = { path = "../../sdk-rust/astrid-sys" }
